TC-003/003-pod-invalid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-missing-resources
spec:
  containers:
    - name: nginx
      image: nginx
