TC-003/003-pod-valid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-with-resources
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
